--- a/src/components/misc/ImageWrapper.astro
+++ b/src/components/misc/ImageWrapper.astro
@@ -14,27 +14,28 @@ import { url } from '../../utils/url-utils'
 const { id, src, alt, position = 'center', basePath = '/' } = Astro.props
 const className = Astro.props.class
 
-const isLocal = !(
-  src.startsWith('/') ||
-  src.startsWith('http') ||
-  src.startsWith('https') ||
-  src.startsWith('data:')
-)
+const isLocal = !(src.startsWith('/') || src.startsWith('http') || src.startsWith('https') || src.startsWith('data:'))
 const isPublic = src.startsWith('/')
 
-// TODO temporary workaround for images dynamic import
+// Temporary workaround for images dynamic import
 // https://github.com/withastro/astro/issues/3373
 let img
 if (isLocal) {
-  const files = import.meta.glob<ImageMetadata>('../../**', {
-    import: 'default',
-  })
-  let normalizedPath = path
-    .normalize(path.join('../../', basePath, src))
-    .replace(/\\/g, '/')
-  img = await files[normalizedPath]()
-  if (!img) {
-    console.error(`No image found for path ${normalizedPath}`)
+  const files = import.meta.glob<ImageMetadata>('../../**', { import: 'default' })
+  
+  // Normalize the path
+  let normalizedPath = `../../${basePath}/${src}`
+    .replace(/\\/g, '/') // Ensure consistent forward slashes
+    .replace(/\/{2,}/g, '/') // Remove redundant slashes
+
+  // Attempt to find a matching key in files
+  const matchedKey = Object.keys(files).find(key => key.endsWith(normalizedPath))
+
+  if (matchedKey) {
+    img = await files[matchedKey]()
+  } else {
+    console.error(`No image found for path: ${normalizedPath}`)
+    console.log('Available keys:', Object.keys(files))
   }
 }
 
@@ -42,8 +43,7 @@ const imageClass = 'w-full h-full object-cover'
 const imageStyle = `object-position: ${position}`
 ---
 <div id={id} class:list={[className, 'overflow-hidden relative']}>
-    <div class="transition absolute inset-0 dark:bg-black/10 bg-opacity-50 pointer-events-none"></div>
-    {isLocal && img && <Image src={img} alt={alt || ""} class={imageClass} style={imageStyle}/>}
-    {!isLocal && <img src={isPublic ? url(src) : src} alt={alt || ""} class={imageClass} style={imageStyle}/>}
+  <div class="transition absolute inset-0 dark:bg-black/10 bg-opacity-50 pointer-events-none"></div>
+  {isLocal && img && <Image src={img} alt={alt || ""} class={imageClass} style={imageStyle}/>}
+  {!isLocal && <img src={isPublic ? url(src) : src} alt={alt || ""} class={imageClass} style={imageStyle}/>}
 </div>
-
